--- a/src/assets/scss/general.scss
+++ b/src/assets/scss/general.scss
@@ -3,3 +3,9 @@
 body {
     font-family: 'Asap Condensed', sans-serif;
 }
+
+main {
+    background: black;
+    padding: 3rem;
+    color: white;
+}
