Added changing jumbotron

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,7 @@
-$bs-primary: #0C7CEC;
+$primary: #0C7CEC;
+$primary-rgb: 12, 124, 236;
+$secondary: #1C1C1C;
+$secondary-rgb: 28, 28, 28;
 
 $bs-btn-color: #0C7CEC;
 $bs-btn-border-color: #0C7CEC;
